<resources>
    <string name="app_name">android</string>
    <string name="home">홈</string>
    <string name="record">기록</string>
    <string name="calendar">캘린더</string>
    <string name="notification">알림</string>
    <string name="album">앨범</string>
    <string name="board">게시판</string>
    <string name="new_calendar">할 일 추가</string>
    <string name="start_calendar">시작 날짜</string>
    <string name="add_calendar_hint">"일정을 입력하세요"</string>
    <string name="home_logo">ZIP</string>
    <string name="home_family_title">행복한 우리 가조쿠</string>
    <string name="home_member">우리 가족 구성원</string>
    <string name="mission_top">매일 가족과 함께 친목도 포인트도!!</string>
    <string name="mission_btn">참여하러가기</string>
    <string name="mission1_title">오늘의 백문백답</string>
    <string name="mission1_content">백문백답 미션에 참여해보세요!</string>
    <string name="mission2_title">오늘의 편지</string>
    <string name="mission2_content">편지쓰기 미션을 해보세요!</string>
    <string name="dialog_name">이름</string>
    <string name="dialog_family">가족명</string>
    <string name="dialog_nickname">나의 애칭</string>
    <string name="new_album">새로운 앨범</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="add_album_msg">새로운 앨범의 이름을 입력해주세요.</string>
    <string name="add_album_hint">앨범명을 입력해주세요.</string>

    <!--  유저 이름  -->
    <string name="usernickname1">유저1</string>
    <string name="usernickname2">유저2</string>
    <string name="usernickname3">유저3</string>

    <!--  ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ  -->
    <!-- 게시판 regdate  -->
    <string name="boardreg1">2022/10/16</string>
    <string name="boardreg2">2022/10/14</string>
    <string name="boardreg3">2022/10/12</string>


    <!-- 게시판 글내용   -->
    <string name="boardcontent1">I am strong. \n 나는 전설이다 \n 내이름은 김민균이다</string>
    <string name="boardcontent2">I believe in myself.</string>
    <string name="boardcontent3">Each day is a new opportunity to grow and be a better version of myself.</string>

    <!-- 게시판 답글수> -->
    <string name="commentCount1">45</string>
    <string name="commentCount2">23</string>
    <string name="commentCount3">44</string>


    <!-- login && signup  -->
    <string name="signup_text">회원가입</string>
    <string name="login_text">로그인</string>
    <string name="email">이메일</string>
    <string name="email_hint">이메일</string>
    <string name="passwordfind_text">비밀번호찾기</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">비밀번호 입력</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="duplicate_check">중복확인</string>
    <string name="name">이름</string>
    <string name="name_hint">이름</string>
    <string name="nickname">애칭</string>
    <string name="nickname_hint">늘곰, 귀요미 등</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- spinner    -->
    <string name="selected_item">Selected item:</string>

    <string-array name="spinner_letter_to">
        <item>엄마</item>
        <item>아빠</item>
        <item>형</item>
    </string-array>
    <string name="room_code">가족방 코드</string>
    <string name="enter_text">입장하기</string>
    <string name="room_hint">방 코드를 입력해주세요.</string>
    <string name="room_message"><u>아직 초대된 방이 없으신가요?</u></string>
</resources>