<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/recordFragment"
        android:icon="@drawable/ic_baseline_photo_library_24"
        android:title="@string/record" />
    <item
        android:id="@+id/placeholderFragment"
        android:title="" />
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/calendar" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notification" />
</menu>