<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    android:id="@+id/profile_constraint"
    >

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.45"
        android:orientation="vertical"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:drawableEnd="@drawable/ic_outline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dialog_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="100dp"
        app:civ_circle_background_color="@color/darkgray"
        app:civ_border_color="@color/grey"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_btn" />

    <TextView
        android:id="@+id/dialog_left_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/dialog_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/dialog_image" />

    <TextView
        android:id="@+id/dialog_right_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/dialog_image" />

    <TextView
        android:id="@+id/dialog_left_family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/dialog_family"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_left_name"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/dialog_left_nickname"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/dialog_right_family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_right_name"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/dialog_right_nickname" />



    <TextView
        android:id="@+id/dialog_left_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/dialog_nickname"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/dialog_left_family"
        app:layout_constraintBottom_toTopOf="@id/dialog_button" />

    <TextView
        android:id="@+id/dialog_right_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/dialog_right_family"
        app:layout_constraintBottom_toTopOf="@id/dialog_button"
        app:layout_constraintLeft_toRightOf="@id/guideline" />

    <Button
        android:id="@+id/dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

